[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkfun_qwiic"
version='1.1.11'
description="SparkFun Electronics qwiic library"
authors = [{name = "SparkFun Electronics", email = "info@sparkfun.com"}]
readme = "DESCRIPTION.rst" # could also have the readme itself if we prefer...
dynamic = ["dependencies"]

classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

keywords = ["electronics", "maker"]

[project.urls]
homepage = "http://www.sparkfun.com/qwiic"

[tool.setuptools]
packages = ["qwiic"]

[tool.setuptools.package-data]
qwiic = ["drivers/**/*", "drivers_linux_only/**/*"]

[tool.setuptools.exclude-package-data]
qwiic = ["*/docs/*"]

[tool.setuptools.dynamic]
dependencies = {file = "install_requirements.txt"}